# spectec

./: .gitignore  README.md  dockerfile  reproduce-2.sh
.github/workflows/: ci-lean.yml  ci-spectec.yml
core/: genindex.html  index.html  objects.inv  search.html  searchindex.js
core/_static/: documentation_options.js
core/appendix/: algorithm.html  changes.html  custom.html  embedding.html  implementation.html  index-instructions.html  index-rules.html  index-types.html  index.html  profiles.html  properties.html
core/binary/: conventions.html  index.html  instructions.html  modules.html  types.html  values.html
core/exec/: conventions.html  index.html  instructions.html  modules.html  numerics.html  runtime.html  types.html  values.html
core/intro/: index.html  introduction.html  overview.html
core/syntax/: conventions.html  index.html  instructions.html  modules.html  types.html  values.html
core/text/: conventions.html  index.html  instructions.html  lexical.html  modules.html  types.html  values.html
core/valid/: conventions.html  index.html  instructions.html  matching.html  modules.html  types.html
js-api/: index.html
metadata/code/: searchindex.js
specification/wasm-1.0/: 1-syntax.spectec  4-runtime.spectec  (+3 more)
spectec/: .gitignore  Makefile  bug-prevention.sh  dockerfile  reproduce-2.sh  specification
spectec/test-interpreter/: Makefile  TEST.md  dune
spectec/test-interpreter/spec-test/: test-semantics.wast
spectec/test-lean4/: Makefile  Wasm.lean  dune
test-interpreter/: TEST.md
test-middlend/: TEST.md
web-api/: index.html
(+221 files in other folders)
