(mdx
  (libraries spectec)
  (deps
    (file ../src/exe-spectec/main.exe)
    (glob_files ../specification/wasm-1.0/*)
    (glob_files ../specification/wasm-2.0/*)
    (glob_files ../specification/wasm-3.0/*)
    (source_tree spec-test-1)
    (source_tree spec-test-2)
    (source_tree spec-test-3)
    (file sample.wast)
    (file sample.wat)
    (file sample.wasm)
  )
  (files TEST.md)
)
